# Test_for_O2

./: .env.prod  .gitignore  README.md  docker-compose.yml
nginx/: nginx.conf
project/: Dockerfile  app.sh  pyproject.toml
project/api/: models.py  urls.py  utils.py  views.py
project/api/migrations/: 0001_initial.py
project/main/: asgi.py  settings.py  urls.py  wsgi.py
